# CortiLoop

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_zh.md  config.example.yaml  pyproject.toml
benchmarks/: download_longmemeval.py  longmemeval.py  longmemeval_official.py
cortiloop/: __init__.py  auth.py  config.py  engine.py  models.py
cortiloop/adapters/: http_server.py  mcp_server.py  nanobot_hook.py  nanobot_plugin.py  openclaw_skill.py  opencode_adapter.py  opencode_bridge.py  shared.py
cortiloop/association/: __init__.py  graph.py
cortiloop/consolidation/: __init__.py  synaptic.py  systems.py
cortiloop/encoding/: __init__.py  attention_gate.py  encoder.py
cortiloop/forgetting/: __init__.py  decay.py  pruner.py
cortiloop/llm/: builtin_embedder.py  client.py  local_client.py  local_embedder.py  protocol.py
cortiloop/reconsolidation/: __init__.py  updater.py
cortiloop/retrieval/: __init__.py  multi_probe.py
cortiloop/storage/: __init__.py  base_store.py  postgres_store.py  sqlite_store.py  vector_index.py
cortiloop/viz/: server.py
cortiloop/workers/: consolidation_worker.py
docs/: architecture.md  comparison-report.md
examples/opencode/: opencode.json  package.json
examples/opencode/plugins/: cortiloop-memory.ts
examples/opencode/tools/: memory.ts
extensions/hermes-plugin/: README.md  __init__.py  client.py  plugin.yaml  schemas.py
extensions/openclaw-plugin/: README.md  config.ts  index.ts  openclaw.plugin.json  package.json
tests/: test_attention_gate.py  test_auth.py  test_base_store.py  test_decay.py  test_store.py  test_vector_index.py  test_worker.py
