[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cortiloop"
version = "0.4.6"
description = "Bioinspired Agent Memory Engine — modeled after human brain memory mechanisms"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["agent", "memory", "bioinspired", "mcp", "nanobot", "openclaw"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "openai>=1.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.20"]
ollama = []  # uses openai client; just needs ollama server running
usearch = ["usearch>=2.0"]
litellm = ["litellm>=1.0"]
postgres = ["psycopg[binary]>=3.1", "pgvector>=0.2"]
yaml = ["pyyaml>=6.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
all = [
    "anthropic>=0.20",
    "usearch>=2.0",
    "litellm>=1.0",
    "psycopg[binary]>=3.1",
    "pgvector>=0.2",
    "pyyaml>=6.0",
]

[project.scripts]
cortiloop-mcp = "cortiloop.adapters.mcp_server:main"
cortiloop-setup = "cortiloop.adapters.openclaw_skill:print_setup_guide"
cortiloop-viz = "cortiloop.viz.server:main"
cortiloop-bench = "benchmarks.longmemeval:main"
cortiloop-bench-official = "benchmarks.longmemeval_official:main"

[tool.hatch.build.targets.wheel]
packages = ["cortiloop"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
